<resources>
    <string name="app_name">iCue Gate</string>

    <!-- Dialog message -->
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="no_internet_msg">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="no_internet_msg_main">This Application required internet connection. Please check your internet setting and try again.</string>
    <string name="no_internet_title">No internet</string>

    <string name="loginLogo">Logo</string>
    <string name="hint_mobile">Enter user name</string>
    <string name="hint_pin">Enter Pin</string>
    <string name="login">Login</string>
    <string name="forgotPin">Forgot Pin</string>
    <string name="copyrights">Copyright © iCue 2018.</string>
    <string name="reseved">All Rights Reserved</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="student_not_found">Student not found</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="helper">helper</string>
    <string name="one_two">1234</string>
    <string name="in">MOVE-IN</string>
    <string name="out">MOVE-OUT</string>
    <string name="mess">MESS</string>
    <string name="rfid_number">RFID Number</string>
    <string name="reading_rfid_data">Swipe your card</string>
    <string name="submit">Submit</string>
    <string name="log_out">&#xE879;</string>

    <string name="relogin">Saved to offline db, Relogin and submit.</string>
    <string name="update_version"> A New version is available on playstore. Do you want to install?</string>
    <string name="scan">SCAN</string>

    <string name="message">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="scane_qr_code">scane QR code</string>

</resources>
