<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_background">

        <ImageView
            android:id="@+id/icue_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="30dp"
            android:contentDescription="@string/loginLogo"
            android:src="@drawable/ic_launcher_app_level" />

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icue_logo"
            android:layout_marginBottom="40dp"
            android:paddingTop="20dp">

            <RelativeLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile"
                    android:text="@string/helper"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/pin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_layout"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pin"
                    android:text="@string/one_two"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pin_layout"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/login"
                android:onClick="login"
                android:src="@drawable/ic_login" />

            <TextView
                android:id="@+id/button_forgotPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_login"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/login"
                android:onClick="forgotPin"
                android:text="@string/forgotPin"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/login_layout"
            android:gravity="center"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/copyright1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyrights"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/copyright2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/copyright1"
                android:text="@string/reseved"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>