<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/_50dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:minHeight="@dimen/_50dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sp" />

        <ImageView
            android:id="@+id/icue_logo"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginStart="@dimen/_10dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/loginLogo"
            android:src="@drawable/ic_launcher_app_level" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true">

        <TextView
            android:padding="10dp"
            android:background="@android:color/holo_red_dark"
            android:id="@+id/offlineCount"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="unsubmitted swipe records"
            android:layout_below="@+id/offlineCount"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reading_rfid_data"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:background="@drawable/white_corners"
            android:gravity="center"
            android:hint="@string/rfid_number"
            android:inputType="textPassword"
            android:minHeight="@dimen/_45dp"
            android:textSize="@dimen/_18sp" />
    </LinearLayout>
</RelativeLayout>
